[package]
name = "blob-stream"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Blob transfer over chunks (datagrams)"
repository = "https://github.com/piot/blob-stream-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-array-rs = "0.0.3"
